# symbion-distillation-core

./: .gitignore  README.md  pyproject.toml
docs/: OVERVIEW.md  PARADIGM_CORE_DISTILLATION.md  STATUS.md
src/symbion_distillation/: __init__.py  pipeline.py  types.py
tests/: test_smoke.py
